fix: align difficulty select

--- a/src/app/features/game/components/game-toolbar/game-toolbar.scss
+++ b/src/app/features/game/components/game-toolbar/game-toolbar.scss
@@ -13,3 +13,8 @@
   font-weight: 600;
   font-size: 18px;
 }
+
+::ng-deep .mat-mdc-form-field {
+  flex-direction: row !important;
+  align-items: center;
+}
